<?xml version="1.0"?>
<package>
  <name>ess_imu_ros1_uart_driver</name>
  <version>1.3.1</version>
  <description>The Epson IMU Driver using UART interface for ROS package</description>

  <maintainer email="jkeller2@andrew.cmu.edu">John Keller</maintainer>
  <maintainer email="raymond.chow@ea.epson.com">Raymond Chow</maintainer>
  <license>BSD</license>
  
  <url type="website">https://wiki.ros.org/ess_sensors/ros1uart</url>
  <url type="repository">https://github.com/cubicleguy/ess_imu_ros1_uart_driver.git</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
