<?xml version="1.0"?>
<package>
  <name>ess_imu_ros1_uart_driver</name>
  <version>1.4.0</version>
  <description>ROS1 package for Epson IMU using UART interface based on C++ wrapper of Linux C driver</description>

  <maintainer email="raymond.chow@ea.epson.com">Raymond Chow</maintainer>
  <license>BSD</license>
  <license>Public Domain</license>

  <url type="website">https://wiki.ros.org/ess_imu_ros1_uart_driver</url>
  <url type="repository">https://github.com/cubicleguy/ess_imu_ros1_uart_driver.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2</run_depend>
</package>
